erDiagram
  %% Сущности учебного портала
  teachers["Преподаватели (teachers)"] {
    INTEGER    id PK        "Первичный ключ"
    TEXT       full_name    "ФИО"
    TEXT       email        "E-mail (может отсутствовать)"
  }

  courses["Курсы (courses)"] {
    INTEGER    id PK            "Первичный ключ"
    TEXT       title            "Название курса"
    INTEGER    hours            "Длительность, ак.час."
    INTEGER    teacher_id FK    "Преподаватель"
  }

  students["Студенты (students)"] {
    INTEGER    id PK         "Первичный ключ"
    TEXT       full_name     "ФИО"
    TEXT       group_code    "Группа (может отсутствовать)"
  }

  enrollments["Записи на курс (enrollments)"] {
    INTEGER    id PK            "Первичный ключ"
    INTEGER    student_id FK    "Студент"
    INTEGER    course_id FK     "Курс"
    TEXT       enrolled_at      "Дата записи"
  }

  %% Связи и кратности
  teachers ||--o{ courses : "ведут"
  courses ||--o{ enrollments : "имеют"
  students ||--o{ enrollments : "оформляют"
